<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodeManager_fl</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="johannes.schantz@enabl-tech.de">johannes</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!--build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>heartbeat_fl</exec_depend>
  <exec_depend>streamManager_fl</exec_depend>
  <exec_depend>ros2can</exec_depend>
  <exec_depend>forklift_controller</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
